[gd_scene load_steps=8 format=3 uid="uid://bnqxjb0txibfq"]

[ext_resource type="Script" path="res://scenes/startup.gd" id="1_7agtl"]
[ext_resource type="Texture2D" uid="uid://bmlevf2jcw558" path="res://assets/textures/openchamp.png" id="2_yrij0"]
[ext_resource type="Shader" path="res://assets/shaders/fog.gdshader" id="3_b4cv1"]
[ext_resource type="Theme" uid="uid://e507d8q4wvpm" path="res://assets/themes/default_theme.tres" id="4_h7jrb"]

[sub_resource type="FastNoiseLite" id="FastNoiseLite_8c74d"]

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_2pvvu"]
seamless = true
noise = SubResource("FastNoiseLite_8c74d")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_syct3"]
shader = ExtResource("3_b4cv1")
shader_parameter/density = 0.06
shader_parameter/speed = Vector2(0.02, 0.01)
shader_parameter/noise_texture = SubResource("NoiseTexture2D_2pvvu")

[node name="Startup" type="Node"]
script = ExtResource("1_7agtl")

[node name="ConnectionUI" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Background" type="Panel" parent="ConnectionUI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Logo" type="TextureRect" parent="ConnectionUI/Background"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -320.0
offset_top = -320.0
offset_right = 320.0
offset_bottom = 320.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_yrij0")

[node name="Fog" type="ColorRect" parent="ConnectionUI/Background"]
material = SubResource("ShaderMaterial_syct3")
offset_top = 2.0
offset_right = 1278.0
offset_bottom = 720.0

[node name="ConnectionStatus" type="RichTextLabel" parent="ConnectionUI/Background"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -177.0
offset_top = -147.0
offset_right = 178.0
offset_bottom = -88.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("4_h7jrb")
theme_override_font_sizes/normal_font_size = 40
bbcode_enabled = true
text = "[center]Connecting...[/center]"

[node name="HostButton" type="Button" parent="ConnectionUI/Background"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -52.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = 39.0
grow_horizontal = 0
theme = ExtResource("4_h7jrb")
text = "Host"

[node name="ReconnectButton" type="Button" parent="ConnectionUI/Background"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -71.0
offset_top = 13.5
offset_right = 71.0
offset_bottom = 44.5
grow_horizontal = 2
grow_vertical = 2
text = "Retry Connection"

[node name="ExitButton" type="Button" parent="ConnectionUI/Background"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -64.5
offset_top = 68.5
offset_right = 64.5
offset_bottom = 99.5
grow_horizontal = 2
grow_vertical = 2
text = "Exit Application"

[node name="Map" type="Node" parent="."]

[node name="MapSpawner" type="MultiplayerSpawner" parent="."]
